# IGP-ride-map-generator

./: .env.example  .gitignore  AGENTS.md  DEPLOYMENT.md  LICENSE  README.md  next.config.js  package-lock.json  package.json  pyproject.toml  tailwind.config.ts  vercel.json
api/python/: generate_combined_map.py
app/: globals.css  layout.tsx  page.tsx
app/api/download/[taskId]/[filename]/: route.ts
app/api/generate/: route.ts
app/api/parse-fit/: route.ts
app/api/status/[taskId]/: route.ts
components/: LogDisplay.tsx  ResultPreview.tsx  RideForm.tsx  TrackSettings.tsx
components/ui/: Button.tsx  Card.tsx  Input.tsx
deployments/: igpsport.service  nginx.conf
lib/: file-task-manager.ts  fit-parser.ts  igpsport.ts  map-styles.ts
lib/python/: generate_combined_map.py  generate_multiple_overlays.py  get_python_command.ts  get_python_path.py
scripts/: dev.js
